@@ -2,6 +2,15 @@
 
 WebAuth 3.6.3 (unreleased)
 
+    The WebAuth Apache modules are no longer built with apxs, which allows
+    a cleaner build and installation process.  However, this means that
+    the modules are now installed in <libexecdir>/apache2/modules by
+    default, where <libexecdir> is specified via the --libexecdir flag to
+    configure and defaults to /usr/local/lib.
+
+    The --with-apache option has been dropped.  Use --with-apxs to specify
+    the full path to apxs if it's not in your PATH.
+
     Catch SIGTERM in the login.fcgi script and only exit once processing
     of the current request has completed.  mod_fastcgi restarts FastCGI
     scripts periodically by killing the old one with SIGTERM, which
